--- a/DailyLife/DailyLife.csproj
+++ b/DailyLife/DailyLife.csproj
@@ -55,8 +55,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converter\BackImageConverter.cs" />
     <Compile Include="MainCanvas.cs" />
+    <Compile Include="Models\ImageShape.cs" />
+    <Compile Include="Models\TextShape.cs" />
     <Compile Include="Tools\GeneralTool.cs" />
+    <Compile Include="Tools\ImageTool.cs" />
+    <Compile Include="Tools\PointTool.cs" />
     <Compile Include="Tools\ToolBase.cs" />
     <Compile Include="Tools\ToolType.cs" />
     <Page Include="MainWindow.xaml">
@@ -100,6 +105,19 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="BackImages\10.jpg" />
+    <Resource Include="BackImages\2.jpg" />
+    <Content Include="BackImages\3.jpg" />
+    <Content Include="BackImages\4.jpg" />
+    <Resource Include="BackImages\5.jpg" />
+    <Content Include="BackImages\6.jpg" />
+    <Resource Include="BackImages\7.jpg" />
+    <Resource Include="BackImages\8.jpg" />
+    <Resource Include="BackImages\9.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="BackImages\1.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
